lab1/Test/L1-A-3-94.output
Error Type A at Line 2
Error Type B at Line 4
Error Type B at Line 6
Error Type B at Line 6
Error Type B at Line 6
