lab1/Test/L1-A-3-94.cmm
int _ ( float DyPYGw , float GehF59 , int jg7TkRBkeXNwdMAQYt3 
  #) {
}
int f3pqYj [ 346411673 ] int 
;
else && || 